Fix Dark mode

--- a/src/main/resources/CSSStyling/dark_manage.css
+++ b/src/main/resources/CSSStyling/dark_manage.css
@@ -31,7 +31,7 @@
 }
 
 .button_not_main:hover {
-    -fx-background-color: #777777; /* Màu nền khi hover */
+    -fx-background-color: #007bff; /* Màu nền khi hover */
     -fx-text-fill: white;          /* Màu chữ trắng khi hover */
     -fx-border-color: white;       /* Màu viền khi hover */
     -fx-background-radius: 6;      /* Bo góc viền khi hover */
@@ -111,7 +111,7 @@
 }
 
 .button_delete:hover {
-    -fx-background-color: red;     /* Màu nền khi hover */
+    -fx-background-color: #007bff;     /* Màu nền khi hover */
     -fx-text-fill: white;          /* Màu chữ trắng khi hover */
     -fx-border-color: white;       /* Màu viền khi hover */
     -fx-background-radius: 6;      /* Bo góc viền khi hover */
@@ -120,7 +120,7 @@
 }
 
 .button_add:hover {
-    -fx-background-color: #00FF00; /* Màu nền khi hover */
+    -fx-background-color: #007bff; /* Màu nền khi hover */
     -fx-text-fill: white;          /* Màu chữ trắng khi hover */
     -fx-border-color: white;       /* Màu viền khi hover */
     -fx-background-radius: 6;      /* Bo góc viền khi hover */
@@ -129,7 +129,7 @@
 }
 
 .button_show:hover {
-    -fx-background-color: #33CCFF; /* Màu nền khi hover */
+    -fx-background-color: #007bff; /* Màu nền khi hover */
     -fx-text-fill: white;          /* Màu chữ trắng khi hover */
     -fx-border-color: white;       /* Màu viền khi hover */
     -fx-background-radius: 6;      /* Bo góc viền khi hover */
@@ -138,7 +138,7 @@
 }
 
 .button_change:hover {
-    -fx-background-color: yellow;  /* Màu nền khi hover */
+    -fx-background-color: #007bff;  /* Màu nền khi hover */
     -fx-text-fill: black;          /* Màu chữ đen khi hover */
     -fx-border-color: white;       /* Màu viền khi hover */
     -fx-background-radius: 6;      /* Bo góc viền khi hover */
@@ -147,7 +147,7 @@
 }
 
 .button_changeInfo:hover {
-    -fx-background-color: green;   /* Màu nền khi hover */
+    -fx-background-color: #007bff;   /* Màu nền khi hover */
     -fx-text-fill: white;          /* Màu chữ trắng khi hover */
     -fx-border-color: white;       /* Màu viền khi hover */
     -fx-background-radius: 6;      /* Bo góc viền khi hover */
